[metadata]
verison = 0.0.1
name = sample
author = Allen Wu
author-email = allenlikeu@gmail.com
summary = sample for python project
license = MIT
description-file =
	README.md
home-page = http://demo.org
requires-python = >=2.7
classifier =
	Development Status :: 4 - Beta
	Enviroment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programing Language :: Python

[files]
pacakges =
	sample
data-files =
	etc/pbr = etc/pbr/*
	etc/init.d = etc/sample.init
	etc/sample =
		etc/a.ini
		etc/b.ini
	
